# riddick

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  DATABASE.md  PARSER_SUMMARY.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  test_request.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
.github/workflows/: ci.yml
api-worker/: package.json  wrangler.toml
api-worker/src/: index.ts
apps/api/: eslint.config.cjs  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/crate-workflow/: eslint.config.cjs  package.json  vitest.config.ts  vitest.unit.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/rust-parser/: .gitignore  Cargo.toml  package.json  wrangler.jsonc
crate-analysis-workflow/: wrangler.jsonc
crate-processor/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
crate-processor-old/: wrangler.toml
crate-processor-old/src/: index.ts
crate-processor/src/: index.ts
examples/: README.md  cloudflare-worker.ts  wrangler.toml
lib/: database-service.ts  types.ts
lib/repositories/: module-repository.test.ts
lib/types/: wasm.d.ts
migrations/: 002_create_modules_table.sql  003_create_items_table.sql
rust-parser/: .gitignore  Cargo.toml  package-lock.json  package.json  wrangler.toml
rust-parser-worker/: Cargo.toml  wrangler.toml
rust-parser-worker/src/: lib.rs
rust-parser/src/: lib.rs
scripts/: migrate.js
shared/: types.ts
src/: database.test.ts  extended-schema.test.ts  index.test.ts  index.ts  migrations.ts  parser-endpoint.ts  rollback.test.ts  types.ts
test/: env.d.ts  index.test.ts  parse-endpoint.test.ts  tsconfig.json
(+46 files in other folders)
