[package]
name = "rust-parser-worker"
version = "0.1.0"
edition = "2021"
authors = ["sam <sam.scott89@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["queue"] }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
ra_ap_syntax = "0.0.293"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6"
time = { version = "0.3.41", features = ["wasm-bindgen"] }
ts-rs = { version = "9.0", features = ["serde-compat"] }
