[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"
authors = ["sam <sam.scott89@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ['http', 'axum'] }
worker-macros = { version = "0.6.0", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
ra_ap_syntax = "0.0.293"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
